[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/about_panel.gd" type="Script" id=1]
[ext_resource path="res://graphics/ui/panels/about_panel.png" type="Texture" id=2]
[ext_resource path="res://graphics/ui/panels/byteblast_button.png" type="Texture" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Autumn Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 47
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = SubResource( 1 )

[sub_resource type="Animation" id=4]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("core:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1000 ), Vector2( 0, 96.2958 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="about_panel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="color_rect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="core" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1377.08, -2.50107 )

[node name="back" type="Button" parent="core"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="panel_img" type="TextureRect" parent="core"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -282.0
margin_top = -379.0
margin_right = 282.0
margin_bottom = 379.0
texture = ExtResource( 2 )

[node name="byteblast_button" type="Button" parent="core"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -188.0
margin_top = -158.578
margin_right = 188.0
margin_bottom = -28.5776
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true

[node name="label" type="Label" parent="core"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -222.5
margin_top = 20.9229
margin_right = 222.5
margin_bottom = 197.923
custom_fonts/font = SubResource( 2 )
text = "Game is developed by
Adnan Bogilovic 
under Byteblast Studio."
align = 1

[node name="label2" type="Label" parent="core"]
modulate = Color( 1, 1, 1, 0.54902 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -233.0
margin_top = 244.563
margin_right = 233.0
margin_bottom = 325.563
custom_fonts/font = SubResource( 3 )
text = "Special thanks to Almir Mulalic for 
great music and soundeffects."
align = 1

[node name="animation_player" type="AnimationPlayer" parent="."]
anims/open_panel = SubResource( 4 )
[connection signal="pressed" from="core/back" to="." method="close_panel"]
[connection signal="pressed" from="core/byteblast_button" to="." method="_on_byteblast_button_pressed"]
